// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks 1`] = `
"<div class=\\"spoiler\\"><p>Secret Block</p></div>
<div class=\\"spoiler\\"><p>Secret Block</p></div>
<div class=\\"spoiler\\"><p>another</p></div>
<blockquote>
<div class=\\"spoiler\\"><blockquote>
<p>Blockquote in secret block in blockquote</p>
</blockquote></div>
</blockquote>
<div class=\\"information ico-after\\"><p>Information Block</p></div>
<div class=\\"information ico-after\\"><p>an other</p></div>
<div class=\\"question ico-after\\"><p>Question Block</p></div>
<div class=\\"question ico-after\\"><p>an other</p></div>
<div class=\\"warning ico-after\\"><p>Attention Block</p></div>
<div class=\\"warning ico-after\\"><p>an other</p></div>
<div class=\\"error ico-after\\"><p>Erreur Block</p></div>
<div class=\\"error ico-after\\"><p>an other</p></div>
<p>[[se]]
| not a block</p>
<p>[[secretsecret]]
| not a block</p>
<p>[[SECRET]]
| not a block</p>
<div class=\\"spoiler\\"><p>Multiline block</p><blockquote>
<p>with blockquote !</p>
</blockquote></div>
<p>| Not a block</p>
<p>[[attention | title]]\n| only parsed if allowTitles is true</p>"
`;

exports[`blocks with allowTitle 1`] = `
"<div class=\\"spoiler\\"><p>Secret Block</p></div>
<div class=\\"spoiler\\"><p>Secret Block</p></div>
<div class=\\"spoiler\\"><p>another</p></div>
<blockquote>
<div class=\\"spoiler\\"><blockquote>
<p>Blockquote in secret block in blockquote</p>
</blockquote></div>
</blockquote>
<div class=\\"information ico-after\\"><p>Information Block</p></div>
<div class=\\"information ico-after\\"><p>an other</p></div>
<div class=\\"question ico-after\\"><p>Question Block</p></div>
<div class=\\"question ico-after\\"><p>an other</p></div>
<div class=\\"warning ico-after\\"><p>Attention Block</p></div>
<div class=\\"warning ico-after\\"><p>an other</p></div>
<div class=\\"error ico-after\\"><p>Erreur Block</p></div>
<div class=\\"error ico-after\\"><p>an other</p></div>
<p>[[se]]
| not a block</p>
<p>[[secretsecret]]
| not a block</p>
<p>[[SECRET]]
| not a block</p>
<div class=\\"spoiler\\"><p>Multiline block</p><blockquote>
<p>with blockquote !</p>
</blockquote></div>
<p>| Not a block</p>
<div class=\\"warning ico-after\\"><p>title</p><p>only parsed if allowTitles is true</p></div>"
`;

exports[`regression 1 1`] = `
"<p>content before</p>
<div class=\\"spoiler\\"><p>Block</p></div>
<p>with content after</p>"
`;
